// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/openapi/openapi Security Schemes Api Key Security (local) 1`] = `
{
  "components": {
    "securitySchemes": {
      "apiSecurity": {
        "in": "header",
        "name": "X-API-KEY",
        "type": "apiKey",
      },
    },
  },
  "info": {
    "contact": {
      "email": "nelson.ricardo.gomes@gmail.com",
    },
    "description": "Some test api",
    "license": {
      "name": "Apache 2.0",
      "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
    },
    "termsOfService": "http://swagger.io/terms/",
    "title": "Server API",
    "version": "1.0.0",
  },
  "openapi": "3.0.3",
  "paths": {
    "/health": {
      "get": {
        "description": "Service healthcheck endpoint",
        "operationId": "healthcheck",
        "responses": {
          "200": {
            "content": {
              "text-plain": {},
            },
            "description": "Successful operation.",
          },
        },
        "security": [
          {
            "apiSecurity": [],
          },
        ],
        "summary": "Server Healthcheck",
        "tags": [
          "Internals",
        ],
      },
    },
  },
  "servers": [
    {
      "url": "https://server.com",
    },
  ],
}
`;

exports[`src/openapi/openapi Security Schemes Basic Security (global) 1`] = `
{
  "components": {
    "securitySchemes": {
      "basicSecurity": {
        "scheme": "basic",
        "type": "http",
      },
    },
  },
  "info": {
    "contact": {
      "email": "nelson.ricardo.gomes@gmail.com",
    },
    "description": "Some test api",
    "license": {
      "name": "Apache 2.0",
      "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
    },
    "termsOfService": "http://swagger.io/terms/",
    "title": "Server API",
    "version": "1.0.0",
  },
  "openapi": "3.0.3",
  "paths": {
    "/health": {
      "get": {
        "description": "Service healthcheck endpoint",
        "operationId": "healthcheck",
        "responses": {
          "200": {
            "content": {
              "text-plain": {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Healthcheck",
        "tags": [
          "Internals",
        ],
      },
    },
  },
  "security": [
    {
      "basicSecurity": [],
    },
  ],
  "servers": [
    {
      "url": "https://server.com",
    },
  ],
}
`;

exports[`src/openapi/openapi Security Schemes Basic Security (local) 1`] = `
{
  "components": {
    "securitySchemes": {
      "basicSecurity": {
        "scheme": "basic",
        "type": "http",
      },
    },
  },
  "info": {
    "contact": {
      "email": "nelson.ricardo.gomes@gmail.com",
    },
    "description": "Some test api",
    "license": {
      "name": "Apache 2.0",
      "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
    },
    "termsOfService": "http://swagger.io/terms/",
    "title": "Server API",
    "version": "1.0.0",
  },
  "openapi": "3.0.3",
  "paths": {
    "/health": {
      "get": {
        "deprecated": true,
        "description": "Service healthcheck endpoint",
        "operationId": "healthcheck",
        "responses": {
          "200": {
            "content": {
              "text-plain": {},
            },
            "description": "Successful operation.",
          },
        },
        "security": [
          {
            "basicSecurity": [],
          },
        ],
        "summary": "Server Healthcheck",
        "tags": [
          "Internals",
        ],
      },
    },
  },
  "servers": [
    {
      "url": "https://server.com",
    },
  ],
}
`;

exports[`src/openapi/openapi Security Schemes Bearer Security (local) 1`] = `
{
  "components": {
    "securitySchemes": {
      "bearerSecurity": {
        "scheme": "bearer",
        "type": "http",
      },
    },
  },
  "info": {
    "contact": {
      "email": "nelson.ricardo.gomes@gmail.com",
    },
    "description": "Some test api",
    "license": {
      "name": "Apache 2.0",
      "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
    },
    "termsOfService": "http://swagger.io/terms/",
    "title": "Server API",
    "version": "1.0.0",
  },
  "openapi": "3.0.3",
  "paths": {
    "/health": {
      "get": {
        "description": "Service healthcheck endpoint",
        "operationId": "healthcheck",
        "responses": {
          "200": {
            "content": {
              "text-plain": {},
            },
            "description": "Successful operation.",
          },
        },
        "security": [
          {
            "bearerSecurity": [],
          },
        ],
        "summary": "Server Healthcheck",
        "tags": [
          "Internals",
        ],
      },
    },
  },
  "servers": [
    {
      "url": "https://server.com",
    },
  ],
}
`;

exports[`src/openapi/openapi Security Schemes Bearer Security with bearerFormat (local) 1`] = `
{
  "components": {
    "securitySchemes": {
      "bearerJwtSecurity": {
        "bearerFormat": "JWT",
        "scheme": "bearer",
        "type": "http",
      },
    },
  },
  "info": {
    "contact": {
      "email": "nelson.ricardo.gomes@gmail.com",
    },
    "description": "Some test api",
    "license": {
      "name": "Apache 2.0",
      "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
    },
    "termsOfService": "http://swagger.io/terms/",
    "title": "Server API",
    "version": "1.0.0",
  },
  "openapi": "3.0.3",
  "paths": {
    "/health": {
      "get": {
        "description": "Service healthcheck endpoint",
        "operationId": "healthcheck",
        "responses": {
          "200": {
            "content": {
              "text-plain": {},
            },
            "description": "Successful operation.",
          },
        },
        "security": [
          {
            "bearerJwtSecurity": [],
          },
        ],
        "summary": "Server Healthcheck",
        "tags": [
          "Internals",
        ],
      },
    },
  },
  "servers": [
    {
      "url": "https://server.com",
    },
  ],
}
`;

exports[`src/openapi/openapi Security Schemes Cookie Security (local) 1`] = `
{
  "components": {
    "securitySchemes": {
      "cookieSecurity": {
        "in": "cookie",
        "name": "JSESSIONID",
        "type": "apiKey",
      },
    },
  },
  "info": {
    "contact": {
      "email": "nelson.ricardo.gomes@gmail.com",
    },
    "description": "Some test api",
    "license": {
      "name": "Apache 2.0",
      "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
    },
    "termsOfService": "http://swagger.io/terms/",
    "title": "Server API",
    "version": "1.0.0",
  },
  "openapi": "3.0.3",
  "paths": {
    "/health": {
      "get": {
        "description": "Service healthcheck endpoint",
        "operationId": "healthcheck",
        "responses": {
          "200": {
            "content": {
              "text-plain": {},
            },
            "description": "Successful operation.",
          },
        },
        "security": [
          {
            "cookieSecurity": [],
          },
        ],
        "summary": "Server Healthcheck",
        "tags": [
          "Internals",
        ],
      },
    },
  },
  "servers": [
    {
      "url": "https://server.com",
    },
  ],
}
`;

exports[`src/openapi/openapi Security Schemes Oauth2 Security authorizationCode (local) 1`] = `
{
  "components": {
    "securitySchemes": {
      "oauth2Security": {
        "description": "This API uses OAuth 2 with the authorizationCode grant flow. [More info](https://api.example.com/docs/auth)",
        "flows": {
          "authorizationCode": {
            "authorizationUrl": "https://api.example.com/oauth2/authorize",
            "refreshUrl": "https://www.domain.com/refreshUrl",
            "scopes": {
              "read_pets": "Read your pets",
              "write_pets": "Modify pets in your account",
            },
            "tokenUrl": "https://api.example.com/oauth2/tokenUrl",
          },
        },
        "type": "oauth2",
      },
    },
  },
  "info": {
    "contact": {
      "email": "nelson.ricardo.gomes@gmail.com",
    },
    "description": "Some test api",
    "license": {
      "name": "Apache 2.0",
      "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
    },
    "termsOfService": "http://swagger.io/terms/",
    "title": "Server API",
    "version": "1.0.0",
  },
  "openapi": "3.0.3",
  "paths": {
    "/health": {
      "get": {
        "description": "Service healthcheck endpoint",
        "operationId": "healthcheck",
        "responses": {
          "200": {
            "content": {
              "text-plain": {},
            },
            "description": "Successful operation.",
          },
        },
        "security": [
          {
            "oauth2Security": [
              "read_pets",
            ],
          },
        ],
        "summary": "Server Healthcheck",
        "tags": [
          "Internals",
        ],
      },
    },
  },
  "servers": [
    {
      "url": "https://server.com",
    },
  ],
}
`;

exports[`src/openapi/openapi Security Schemes Oauth2 Security clientCredentials (local) 1`] = `
{
  "components": {
    "securitySchemes": {
      "oauth2Security": {
        "description": "This API uses OAuth 2 with the implicit grant flow. [More info](https://api.example.com/docs/auth)",
        "flows": {
          "clientCredentials": {
            "refreshUrl": "https://www.domain.com/refreshUrl",
            "scopes": {
              "read_pets": "Read your pets",
              "write_pets": "Modify pets in your account",
            },
            "tokenUrl": "https://api.example.com/tokenUrl",
          },
        },
        "type": "oauth2",
      },
    },
  },
  "info": {
    "contact": {
      "email": "nelson.ricardo.gomes@gmail.com",
    },
    "description": "Some test api",
    "license": {
      "name": "Apache 2.0",
      "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
    },
    "termsOfService": "http://swagger.io/terms/",
    "title": "Server API",
    "version": "1.0.0",
  },
  "openapi": "3.0.3",
  "paths": {
    "/health": {
      "get": {
        "description": "Service healthcheck endpoint",
        "operationId": "healthcheck",
        "responses": {
          "200": {
            "content": {
              "text-plain": {},
            },
            "description": "Successful operation.",
          },
        },
        "security": [
          {
            "oauth2Security": [
              "read_pets",
            ],
          },
        ],
        "summary": "Server Healthcheck",
        "tags": [
          "Internals",
        ],
      },
    },
  },
  "servers": [
    {
      "url": "https://server.com",
    },
  ],
}
`;

exports[`src/openapi/openapi Security Schemes Oauth2 Security implicit (local) 1`] = `
{
  "components": {
    "securitySchemes": {
      "oauth2Security": {
        "description": "This API uses OAuth 2 with the implicit grant flow. [More info](https://api.example.com/docs/auth)",
        "flows": {
          "implicit": {
            "authorizationUrl": "https://api.example.com/oauth2/authorize",
            "refreshUrl": "https://www.domain.com/refreshUrl",
            "scopes": {
              "read_pets": "Read your pets",
              "write_pets": "Modify pets in your account",
            },
          },
        },
        "type": "oauth2",
      },
    },
  },
  "info": {
    "contact": {
      "email": "nelson.ricardo.gomes@gmail.com",
    },
    "description": "Some test api",
    "license": {
      "name": "Apache 2.0",
      "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
    },
    "termsOfService": "http://swagger.io/terms/",
    "title": "Server API",
    "version": "1.0.0",
  },
  "openapi": "3.0.3",
  "paths": {
    "/health": {
      "get": {
        "description": "Service healthcheck endpoint",
        "operationId": "healthcheck",
        "responses": {
          "200": {
            "content": {
              "text-plain": {},
            },
            "description": "Successful operation.",
          },
        },
        "security": [
          {
            "oauth2Security": [
              "read_pets",
            ],
          },
        ],
        "summary": "Server Healthcheck",
        "tags": [
          "Internals",
        ],
      },
    },
  },
  "servers": [
    {
      "url": "https://server.com",
    },
  ],
}
`;

exports[`src/openapi/openapi Security Schemes Oauth2 Security password (local) 1`] = `
{
  "components": {
    "securitySchemes": {
      "oauth2Security": {
        "description": "This API uses OAuth 2 with the implicit grant flow. [More info](https://api.example.com/docs/auth)",
        "flows": {
          "password": {
            "refreshUrl": "https://www.domain.com/refreshUrl",
            "scopes": {
              "read_pets": "Read your pets",
              "write_pets": "Modify pets in your account",
            },
            "tokenUrl": "https://api.example.com/tokenUrl",
          },
        },
        "type": "oauth2",
      },
    },
  },
  "info": {
    "contact": {
      "email": "nelson.ricardo.gomes@gmail.com",
    },
    "description": "Some test api",
    "license": {
      "name": "Apache 2.0",
      "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
    },
    "termsOfService": "http://swagger.io/terms/",
    "title": "Server API",
    "version": "1.0.0",
  },
  "openapi": "3.0.3",
  "paths": {
    "/health": {
      "get": {
        "description": "Service healthcheck endpoint",
        "operationId": "healthcheck",
        "responses": {
          "200": {
            "content": {
              "text-plain": {},
            },
            "description": "Successful operation.",
          },
        },
        "security": [
          {
            "oauth2Security": [
              "read_pets",
            ],
          },
        ],
        "summary": "Server Healthcheck",
        "tags": [
          "Internals",
        ],
      },
    },
  },
  "servers": [
    {
      "url": "https://server.com",
    },
  ],
}
`;
